fix word wrap

--- a/src/css/btn.css
+++ b/src/css/btn.css
@@ -1,3 +1,4 @@
 .waves-red {
   background-color: rgb(191, 65, 65);
+  width: 100%;
 }
